--- a/index.html
+++ b/index.html
@@ -16,9 +16,11 @@
 <body class="bg-light">
     <!-- header starting -->
     <header>
+        <!-- title and slogan -->
         <h2 class="text-center p-3"> <span class="text-success">Book Archive</span> | <span
                 class="fs-5 text-secondary">Search your
                 desired book below</span></h2>
+        <!-- search box -->
         <div class="input-group mb-3 w-50 mx-auto">
             <input id="search-field" type="text" class="form-control" placeholder="Search the book you want..."
                 aria-label="Search the book you want..." aria-describedby="button-addon2">
@@ -30,9 +32,8 @@
     <!-- header ending -->
 
 
-    <!-- body starting -->
-
-    <body>
+    <!-- main starting -->
+    <main>
         <!-- spinner -->
         <section id="spinner">
             <div class="d-flex justify-content-center" style="height: 250px">
@@ -42,15 +43,18 @@
             </div>
         </section>
 
-        <!-- search result count -->
+        <!-- message section -->
         <section class="container-fluid">
-            <div id="result-message" class="alert alert-success w-50 mx-auto py-2" role="alert">
+            <div id="result-message" class="alert alert-info w-50 mx-auto py-2" role="alert">
             </div>
             <div id="no-result-message" class="alert alert-danger w-50 mx-auto py-2" role="alert">
+                <h6 class="text-center">Sorry! No result has been found!</h6>
             </div>
             <div id="error-message" class="alert alert-danger w-50 mx-auto py-2" role="alert">
+                <h6 class="text-center">Something went wrong! Please try again later.</h6>
             </div>
             <div id="empty-text-message" class="alert alert-warning w-50 mx-auto py-2" role="alert">
+                <h6 class="text-center">Please write something to search! </h6>
             </div>
         </section>
 
@@ -59,8 +63,8 @@
             <div id="search-results" class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-3">
             </div>
         </section>
-    </body>
-    <!-- body ending -->
+    </main>
+    <!-- main ending -->
 
 
     <!-- footer starting -->
@@ -74,8 +78,10 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj"
         crossorigin="anonymous"></script>
+
     <!-- font-awesome -->
     <script src="https://kit.fontawesome.com/bcae4cb038.js" crossorigin="anonymous"></script>
+
     <!-- custom javascript -->
     <script src="js/app.js"></script>
 </body>
