UI design updated

--- a/index.html
+++ b/index.html
@@ -19,12 +19,12 @@
         <!-- title and slogan -->
         <h2 class="text-center p-3"> <span class="text-success">Book Archive</span> | <span
                 class="fs-5 text-secondary">Search your
-                desired book below</span></h2>
+                desired book</span></h2>
         <!-- search box -->
         <div class="input-group mb-3 w-50 mx-auto">
             <input id="search-field" type="text" class="form-control" placeholder="Search the book you want..."
                 aria-label="Search the book you want..." aria-describedby="button-addon2">
-            <button onclick="loadBook()" class="btn btn-outline-success" type="button" id="search-button"><i
+            <button onclick="loadBook()" class="btn btn-success" type="button" id="search-button"><i
                     class="fas fa-search"></i>
                 Search</button>
         </div>
