Some changes added

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             <div id="result-message" class="alert alert-info w-50 mx-auto py-2" role="alert">
             </div>
             <div id="no-result-message" class="alert alert-danger w-50 mx-auto py-2" role="alert">
-                <h6 class="text-center">Sorry! No result has been found!</h6>
+                <h6 class="text-center">No result found!</h6>
             </div>
             <div id="error-message" class="alert alert-danger w-50 mx-auto py-2" role="alert">
                 <h6 class="text-center">Something went wrong! Please try again later.</h6>
